# og-lans

./: .gitignore  ACADEMIC_EVALUATION_PROTOCOL.md  ACADEMIC_METRICS_GUIDE.md  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_REVIEW_REPORT.md  DATASET_DUEE_FIN.md  DATA_STATEMENT.md  DuEE-Fin 数据集详细描述.md  ENGINEERING_STATUS.md  ETHICS_AND_LIMITATIONS.md  LICENSE  OG-LANS_ExecPlan.md  OG_LANS_METHODOLOGY.md  PHASE0_REPO_AUDIT.md  README.md  REPRODUCIBILITY_CHECKLIST.md  RUNBOOK_TEMPLATES.md  SKILLS_MCP_GUIDE.md  evaluate.py  evaluate_api.py  main.py  pyproject.toml  pytest.ini  requirements.txt  执行说明.md
configs/: config.yaml  config_compare_base.yaml  config_debug.yaml  config_phase3_mvp.yaml  config_plain_sft.yaml  eval_protocol.yaml  role_aliases_duee_fin.yaml
docs/: 2026-04-18_全工作区代码审查报告.md  2026-04-18_阶段性研究汇报_工作区与基线总览.md  2026-04-19_gpu-4090服务器工程问题记录.md  2026-04-19_worktree整理与处置记录.md  2026-04-19_全仓问题驱动修复方案.md  METRIC_AUDIT.md  METRIC_SPEC.md  PROJECT_DESCRIPTION_COMBINED.md  PROJECT_DESCRIPTION_CURRENT_IMPLEMENTATION.md  PROJECT_DESCRIPTION_PAPER_NARRATIVE.md
scripts/: README.md  SCRIPTS.md  ablation_study.py  audit_baseline_matrix.py  audit_training_signal.py  build_graph.py  build_research_split_manifest.py  build_teacher_silver.py  migrate_model_store.py  resolve_config_context.py  run_api_repro_suite.py  run_comparable_eval_suite.py  run_debug.sh  run_eval_academic.sh  run_eval_api.sh  run_eval_base.sh  run_eval_local.sh  run_local_repro_suite.py  run_mini_matrix.py  run_parallel_eval_train.sh  run_train.sh  run_train_tmux.sh  validate_academic_artifacts.py
(+122 files in other folders)
